--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">searchpicture_front</string>
+    <string name="kakao_app_key">KAKAO_APP_KEY</string>
 </resources>
